--- a/DroneDeliveryService.Test/DroneDeliveryService.Test.csproj
+++ b/DroneDeliveryService.Test/DroneDeliveryService.Test.csproj
@@ -30,4 +30,8 @@
       <Content Include="bin\Debug\net6.0\output.txt" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="bin\Debug\net6.0" />
+    </ItemGroup>
+
 </Project>
